--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.886.0",
     "bcrypt": "^6.0.0",
     "colors": "^1.4.0",
     "dotenv": "^17.0.1",
