--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "@aws-sdk/client-s3": "^3.886.0",
     "bcrypt": "^6.0.0",
     "colors": "^1.4.0",
+    "cors": "^2.8.5",
     "dotenv": "^17.0.1",
     "express": "^5.1.0",
+    "express-rate-limit": "^8.1.0",
+    "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.3",
     "multer": "^2.0.2"
